Edits to news summary items based on revised Notebook LM prompt, training data.

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,39 +1,72 @@
 <!--
 
-Did a NotebookLM query last night trying to refine this week's news summary items, all selected by me so far. Didn't really like the NotebookLM results and haven't made any edits to this edition's copy yet based on them. But this query did clarify for me some changes I need to make in my research notebook's training sources.
+Revised of copy in this draft incorporates info from a refined version of my my recent NotebookLM prompt, plus a followup, after making some changes to my research notebook's training data...
 
-Will proceed with those and re-run the query.  Specifically, I'm going to add in some relevant Google News search links and remove this edition's early draft from the training data. This edition of the newsletter is ultimately supposed to be the output of my workflow, not the input, so I realize it doesn't need to be in the training data.
+# Prompt 1
 
- Chalk it up to growing pains from just getting started, I guess. Anyway, for the record, here's the query. -PM
+For my next w3w newsletter, going out 13 April 2025, could you please suggest 10 recent news articles with links that I might want to include in my news summary? These should come from the news sites and Google News links in your training data. Please also list the articles and links in descending order, from whichever you think will be most important to w3w readers at the top, down to the least important.
 
-# Query
+# Response 1
 
-For my next newsletter, going out 13 April 2025, could you please suggest 10 recent articles with links that I might want to include in my news summary?
+Here are 10 recent news articles with links that you might want to include in your next w3w newsletter, going out on April 13, 2025. They are listed in descending order of potential importance to your readers, based on the information available in the sources.
 
-# Response
+*   **Trump Becomes First President to Sign Crypto Bill Into Law, Ending Anti-DeFi IRS Rule** [99, Decrypt]. This development signifies a significant shift in US regulation towards the crypto space and the end of a specific IRS rule opposed by the DeFi community. This would likely be very relevant to your audience.
+    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Trump%20Signs%20Crypto%20Bill%20Decrypt&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Trump%20Signs%20Crypto%20Bill%20Decrypt&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
 
-Here are 10 recent articles with links that you might want to include in your newsletter going out on April 13, 2025, drawing from the provided sources:
+*   **US Senate bill threatens crypto, AI data centers with fees — Report** [86, Cointelegraph, 99]. A potential bill imposing fees on crypto and AI data centers would have substantial implications for both sectors, which are central to your newsletter's focus.
+    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=US%20Senate%20bill%20threatens%20crypto%20AI%20data%20centers%20Cointelegraph&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=US%20Senate%20bill%20threatens%20crypto%20AI%20data%20centers%20Cointelegraph&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
 
-1. Good Prof G episode: This episode discusses the S&P 500 trading like a meme stock, bond yields/debt ceiling, and the "rivers reversing" effect on Big Tech. While the specific link isn't fully provided in the source ("https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson | S&P 500 trading like a meme stock | Bond yields/debt ceiling | 'Rivers reversing.' Effect on Big Tech."), you can likely find the full link by searching for "Prof G S&P 500 meme stock April 2025".
+*   **BlackRock Crypto Asset Holdings Down $5 Billion as Bitcoin, Ethereum Prices Fall** [65, 76, Decrypt]. Significant fluctuations in the holdings of a major institutional player like BlackRock due to price drops in leading cryptocurrencies like Bitcoin and Ethereum are important market indicators for your readers.
+    *   **Link to Decrypt article:** [Not found directly in the provided excerpts, but the title and source are clear].
+    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=BlackRock%20Crypto%20Asset%20Holdings%20Down%20$5%20Billion%20Decrypt&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=BlackRock%20Crypto%20Asset%20Holdings%20Down%20$5%20Billion%20Decrypt&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
 
-2. DOJ dissolves its crypto task force: This is mentioned as a notable event in the week of April 6-12, 2025. The source for this information is not provided in the excerpt, indicated by "()". You would need to find a news article from a reputable source covering this event, such as Reuters, Bloomberg, or the Wall Street Journal, to get the link.
+*   **Can Ethereum Be Truly Private? Developers Push for Encrypted Mempool, Default Privacy** [61, CoinDesk, 92]. Developments in making the Ethereum network more private address a key concern in the crypto space and are relevant to the technical aspects your newsletter often covers.
+    *   **Link to CoinDesk article:** [Not found directly in the provided excerpts, but the title and source are clear].
+    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Can%20Ethereum%20Be%20Truly%20Private%20CoinDesk&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Can%20Ethereum%20Be%20Truly%20Private%20CoinDesk&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
 
-3. Ripple buys Hidden Road + new ETF: This indicates two significant developments for Ripple in the week of April 6-12, 2025. Similar to the previous point, the source is not provided "()". Search for news articles from that week about Ripple acquiring Hidden Road and launching a new ETF on financial news sites.
+*   **OpenAI’s first research regarding ChatGPT's effects on users' emotions** [41, MIT Technology Review]. As AI is a key topic of your newsletter, research into the psychological effects of a leading AI model like ChatGPT is noteworthy.
+    *   **Link to MIT Technology Review:** [Not found directly in the provided excerpts, but the title and source are clear].
+    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=OpenAI%20research%20ChatGPT%20emotions%20MIT%20Technology%20Review&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=OpenAI%20research%20ChatGPT%20emotions%20MIT%20Technology%20Review&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
 
-4. Tether considering new US stablecoin to facilitate faster payments between banks: This potential development for Tether is noted in the week of April 6-12, 2025. The link is marked as "TK", meaning "to come" or "to be added." Look for articles on financial news outlets reporting on Tether's plans for a new US stablecoin around that time.
+*   **Solana futures begain trading on the Chicago Mercantile Exchange** [41, Cointelegraph]. The introduction of futures trading for Solana on a major exchange like the CME indicates growing institutional interest and maturity for this Ethereum competitor, a significant development for your crypto-focused readership.
+    *   **Link to Cointelegraph article:** [Not found directly in the provided excerpts, but the title and source are clear].
+    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Solana%20futures%20CME%20Cointelegraph&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Solana%20futures%20CME%20Cointelegraph&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
 
-5. Galaxy listing on Nasdaq?: This suggests a potential public listing for Galaxy Digital on the Nasdaq in the week of April 6-12, 2025. The source is again not provided "()". Search financial news for updates on Galaxy Digital's potential Nasdaq listing around early April 2025.
+*   **Stablecoin issuer Tether is in talks with a Big Four U.S. accounting firm to audit its reserves** [41, Reuters]. Given the importance of stablecoins like Tether's USDT in the crypto ecosystem and past scrutiny of their reserves, news of a potential audit by a major firm is significant for transparency and trust.
+    *   **Link to Reuters article:** [Not found directly in the provided excerpts, but the title and source are clear].
+    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Tether%20Big%20Four%20audit%20Reuters&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Tether%20Big%20Four%20audit%20Reuters&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
 
-6. U.S. SEC's Crypto Trading Roundtable Delves Into Easing Path for Platforms: This CoinDesk article from "14 hours ago" (relative to the source's timestamp, likely around April 11, 2025) reports on the SEC discussing a potential short-term solution for overseeing crypto firms. You can find this article at: https://www.coindesk.com/policy/2025/04/11/us-secs-crypto-trading-roundtable-delves-into-easing-path-for-platforms/
+*   **Analytics provider Strategy, formerly known as MicroStrategy, raised $711 million to buy more bitcoin for its corporate treasury**. MicroStrategy's continued aggressive acquisition of Bitcoin is a notable trend that reflects corporate adoption and has market implications.
+    *   **Link:** Not directly available in the excerpt, but likely available on financial news sites.
+    *   **Plausible Google News Link (based on description):** [https://news.google.com/search?q=Strategy%20MicroStrategy%20raised%20$711%20million%20bitcoin&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Strategy%20MicroStrategy%20raised%20$711%20million%20bitcoin&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
 
-7. Ripple and SEC File Joint Motion to Pause Appeals: Another CoinDesk article from "Apr 11, 2025" indicates a potential pause in the legal battle between Ripple and the SEC to allow for a "negotiated resolution". This article can be found at: https://www.coindesk.com/policy/2025/04/11/ripple-and-sec-file-joint-motion-to-pause-appeals/
+*   **Jed McCaleb, co-founder of Ripple and Mt. Gox, is investing $1 billion in Vast Space, a new aerospace company** [41, Decrypt]. A prominent figure in the crypto world making a significant investment in the space industry is an interesting intersection of emerging technologies that might intrigue your readers.
+    *   **Link to Decrypt article:** [Not found directly in the provided excerpts, but the title and source are clear].
+    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Jed%20McCaleb%20Vast%20Space%20Decrypt&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Jed%20McCaleb%20Vast%20Space%20Decrypt&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
 
-8. Donald Trump's Memecoin Faces Massive $320M Token Unlock Amid Record Low Price: This CoinDesk article from "18 hours ago" (likely around April 10 or 11, 2025) discusses a significant token unlock for the TRUMP memecoin and its low price. Look for this article on CoinDesk's website with that headline and approximate date.
+*   **Washington Watch: The Securities and Exchange Commission hosted its first crypto-industry roundtable Friday, with commisioners vowing to work toward a viable regulatory framework for the token market... The White House is exploring the use of on-chain technology to improve security, transparency, and traceability of foreign-aid payments... President Trump explicitly promoted the TRUMP memecoin on his Truth Social platform, sending its price on a roller-coaster ride.**. These are various developments in the regulatory and political landscape concerning crypto, which are always relevant for your audience.
+    *   **Sources:** This is a summary of several points from the "Washington Watch" section in the "2025-03-23-wir.md" excerpt. You would need to find the original news reports for each of these points from news outlets like CoinDesk, The Block, etc., by searching with relevant keywords and dates around March 21-22, 2025.
 
-9. Crypto Exchanges Like Coinbase May Soon Get a Regulatory Sandbox to Play In: This headline appears in the "Top News" section of Decrypt, suggesting a development where crypto exchanges, possibly including Coinbase, might get a regulatory sandbox. Search for this article on Decrypt's website around April 11, 2025.
+Please note that some of the Google News links provided are plausible constructions based on the available information. You should verify the exact links and headlines on Google News or the respective news sites to ensure accuracy for your newsletter.
 
-10. BlackRock Crypto Asset Holdings Down $5 Billion as Bitcoin, Ethereum Prices Fall: This article is listed in Decrypt's "News Explorer" from "Apr 11". It reports on a decrease in the value of BlackRock's crypto holdings due to price drops in Bitcoin and Ethereum. You can find this article on Decrypt's website with that headline and date.
-Please note that for the first five suggestions, the specific links were not available in the provided source excerpts. You will need to conduct further research on financial news websites to find the corresponding articles and their links. The last five suggestions are based on more specific headlines and dates from CoinDesk and Decrypt, making it easier to locate the articles online.
+# Prompt 2
+
+Those look good so far. Now could you please rewrite the summaries as markdown, each in 1-3 sentences in the style of w3w's usual news summaries?
+
+# Response 2
+
+Here are the rewritten news summaries in markdown format, each in 1-3 sentences in the style of w3w's usual news summaries:
+
+*   **Trump became the first president to sign a crypto bill into law**, ending an anti-DeFi IRS rule, signaling a significant shift in US regulation of the crypto space [your prior response]. This move is likely to be very relevant for w3w readers interested in DeFi and regulatory developments [your prior response].
+*   A **US Senate bill is reportedly threatening crypto and AI data centers with new fees**, potentially impacting both sectors crucial to w3w's coverage [your prior response]. This development could have substantial implications for the growth and operation of crypto and AI infrastructure in the US [your prior response].
+*   **BlackRock's crypto asset holdings reportedly decreased by $5 billion** due to recent price declines in Bitcoin and Ethereum [your prior response]. This significant fluctuation for a major institutional player highlights the volatility in the cryptocurrency market [your prior response].
+*   **Ethereum developers are exploring ways to enhance privacy on the network**, with discussions around encrypted mempools and default privacy settings gaining traction [your prior response]. This push for greater privacy addresses a key concern within the crypto community [your prior response].
+*   **OpenAI has released its initial research into the emotional impact of ChatGPT on its users**, noting that a small portion of users engage with the AI for about half an hour daily. As AI's influence grows, understanding its effects on users is becoming increasingly important [your prior response].
+*   **Solana futures have begun trading on the Chicago Mercantile Exchange (CME)**. This marks a significant step for Solana, indicating growing institutional interest in the Ethereum competitor [your prior response].
+*   **Stablecoin issuer Tether is reportedly in discussions with a Big Four accounting firm to conduct an audit of its reserves**. This move towards greater transparency could impact trust and stability within the stablecoin market [your prior response].
+*   **Analytics provider Strategy (formerly MicroStrategy) raised $711 million to further increase its Bitcoin holdings**, now exceeding $40 billion. This ongoing accumulation of Bitcoin by a major corporation reflects a trend of corporate adoption [your prior response].
+*   **Jed McCaleb, a co-founder of Ripple and Mt. Gox, is investing $1 billion in Vast Space**, a new aerospace company aiming to build a space station to succeed the ISS. This investment by a prominent figure in the crypto world into the space industry represents an interesting convergence of technologies [your prior response].
+*   **The SEC hosted its first crypto-industry roundtable**, discussing a regulatory framework, while the **White House is exploring on-chain tech for foreign aid**, and **President Trump promoted the TRUMP memecoin**, causing price volatility. These diverse developments in regulation and political engagement with crypto are important for w3w readers to follow [your prior response].
 
 -->
 
@@ -52,9 +85,19 @@ Please note that for the first five suggestions, the specific links were not ava
 
 ### Five Things: April 6-12, 2025
 
-<!-- Riff on the week's insane markets/tariffs... -->
+- Good Prof G episode: https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson | S&P 500 trading like a meme stock | Bond yields/debt ceiling | "Rivers reversing." Effect on Big Tech. ([]())
 
-- Good Prof G episode: https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson | S&P 500 trading like a meme stock | Bond yields/debt ceiling | "Rivers reversing." Effect on Big Tech.
+- **The Atlantic's Matteo Wong** says the White House's attack on academic research is [jeopardizing American leadership](https://www.theatlantic.com/technology/archive/2025/04/trump-jeopardizing-ai-boom/682404/) in AI, which relies on collaboration among universities, government, and industry.
+
+- **BlackRock's crypto asset holdings reportedly decreased by $5 billion** due to recent price declines in Bitcoin and Ethereum. This significant fluctuation for a major institutional player highlights the volatility in the cryptocurrency market.
+
+- **Trump became the first president to sign a crypto bill into law**, ending an anti-DeFi IRS rule, signaling a significant shift in US regulation of the crypto space.
+
+- **A US Senate bill is reportedly threatening crypto and AI data centers with new fees**, potentially impacting both sectors crucial to w3w's coverage. This development could have substantial implications for the growth and operation of crypto and AI infrastructure in the US.
+
+- **Ethereum developers are exploring ways to enhance privacy on the network**, with discussions around encrypted mempools and default privacy settings gaining traction. This push for greater privacy addresses a key concern within the crypto community.
+
+- MSTR may need to sell bitcoin https://news.google.com/read/CBMiZkFVX3lxTE0wZmc2RWsySkFyUWh0a3VEbGtmUXBVZTFyNWVScWtPdEFpZWlxU0cyb1c2VUM3RG1lMklxVDBiYUVBRS1VSlpwYVhkZkFSYVFPMEJUUWhtTmVXN1QySklEc3NjOTA2dw?hl=en-US&gl=US&ceid=US%3Aen
 
 - DOJ dissolves its crypto task force. ([]())
 
@@ -64,21 +107,16 @@ Please note that for the first five suggestions, the specific links were not ava
 
 - Galaxy listing on Nasdaq? ([]())
 
-<!--
-
-Other candidates...
-
-- Bosa video on AI distillation for CNBC.
 - House committee hearing wednesday on innovation and digital assets.
+
 - Argentina probing Libra.
 
--->
 
 ### Odds & Ends
 
 - TK ([Washington Post](https://www.washingtonpost.com/climate-solutions/2025/04/09/seaweed-problem-caribbean-electricity/))
 
-- Coachella: https://www.coachella.com/schedule
+- AI dolls <!-- TKTK -->
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
