--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,75 +1,3 @@
-<!--
-
-Revised of copy in this draft incorporates info from a refined version of my my recent NotebookLM prompt, plus a followup, after making some changes to my research notebook's training data...
-
-# Prompt 1
-
-For my next w3w newsletter, going out 13 April 2025, could you please suggest 10 recent news articles with links that I might want to include in my news summary? These should come from the news sites and Google News links in your training data. Please also list the articles and links in descending order, from whichever you think will be most important to w3w readers at the top, down to the least important.
-
-# Response 1
-
-Here are 10 recent news articles with links that you might want to include in your next w3w newsletter, going out on April 13, 2025. They are listed in descending order of potential importance to your readers, based on the information available in the sources.
-
-*   **Trump Becomes First President to Sign Crypto Bill Into Law, Ending Anti-DeFi IRS Rule** [99, Decrypt]. This development signifies a significant shift in US regulation towards the crypto space and the end of a specific IRS rule opposed by the DeFi community. This would likely be very relevant to your audience.
-    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Trump%20Signs%20Crypto%20Bill%20Decrypt&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Trump%20Signs%20Crypto%20Bill%20Decrypt&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
-
-*   **US Senate bill threatens crypto, AI data centers with fees — Report** [86, Cointelegraph, 99]. A potential bill imposing fees on crypto and AI data centers would have substantial implications for both sectors, which are central to your newsletter's focus.
-    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=US%20Senate%20bill%20threatens%20crypto%20AI%20data%20centers%20Cointelegraph&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=US%20Senate%20bill%20threatens%20crypto%20AI%20data%20centers%20Cointelegraph&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
-
-*   **BlackRock Crypto Asset Holdings Down $5 Billion as Bitcoin, Ethereum Prices Fall** [65, 76, Decrypt]. Significant fluctuations in the holdings of a major institutional player like BlackRock due to price drops in leading cryptocurrencies like Bitcoin and Ethereum are important market indicators for your readers.
-    *   **Link to Decrypt article:** [Not found directly in the provided excerpts, but the title and source are clear].
-    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=BlackRock%20Crypto%20Asset%20Holdings%20Down%20$5%20Billion%20Decrypt&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=BlackRock%20Crypto%20Asset%20Holdings%20Down%20$5%20Billion%20Decrypt&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
-
-*   **Can Ethereum Be Truly Private? Developers Push for Encrypted Mempool, Default Privacy** [61, CoinDesk, 92]. Developments in making the Ethereum network more private address a key concern in the crypto space and are relevant to the technical aspects your newsletter often covers.
-    *   **Link to CoinDesk article:** [Not found directly in the provided excerpts, but the title and source are clear].
-    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Can%20Ethereum%20Be%20Truly%20Private%20CoinDesk&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Can%20Ethereum%20Be%20Truly%20Private%20CoinDesk&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
-
-*   **OpenAI’s first research regarding ChatGPT's effects on users' emotions** [41, MIT Technology Review]. As AI is a key topic of your newsletter, research into the psychological effects of a leading AI model like ChatGPT is noteworthy.
-    *   **Link to MIT Technology Review:** [Not found directly in the provided excerpts, but the title and source are clear].
-    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=OpenAI%20research%20ChatGPT%20emotions%20MIT%20Technology%20Review&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=OpenAI%20research%20ChatGPT%20emotions%20MIT%20Technology%20Review&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
-
-*   **Solana futures begain trading on the Chicago Mercantile Exchange** [41, Cointelegraph]. The introduction of futures trading for Solana on a major exchange like the CME indicates growing institutional interest and maturity for this Ethereum competitor, a significant development for your crypto-focused readership.
-    *   **Link to Cointelegraph article:** [Not found directly in the provided excerpts, but the title and source are clear].
-    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Solana%20futures%20CME%20Cointelegraph&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Solana%20futures%20CME%20Cointelegraph&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
-
-*   **Stablecoin issuer Tether is in talks with a Big Four U.S. accounting firm to audit its reserves** [41, Reuters]. Given the importance of stablecoins like Tether's USDT in the crypto ecosystem and past scrutiny of their reserves, news of a potential audit by a major firm is significant for transparency and trust.
-    *   **Link to Reuters article:** [Not found directly in the provided excerpts, but the title and source are clear].
-    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Tether%20Big%20Four%20audit%20Reuters&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Tether%20Big%20Four%20audit%20Reuters&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
-
-*   **Analytics provider Strategy, formerly known as MicroStrategy, raised $711 million to buy more bitcoin for its corporate treasury**. MicroStrategy's continued aggressive acquisition of Bitcoin is a notable trend that reflects corporate adoption and has market implications.
-    *   **Link:** Not directly available in the excerpt, but likely available on financial news sites.
-    *   **Plausible Google News Link (based on description):** [https://news.google.com/search?q=Strategy%20MicroStrategy%20raised%20$711%20million%20bitcoin&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Strategy%20MicroStrategy%20raised%20$711%20million%20bitcoin&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
-
-*   **Jed McCaleb, co-founder of Ripple and Mt. Gox, is investing $1 billion in Vast Space, a new aerospace company** [41, Decrypt]. A prominent figure in the crypto world making a significant investment in the space industry is an interesting intersection of emerging technologies that might intrigue your readers.
-    *   **Link to Decrypt article:** [Not found directly in the provided excerpts, but the title and source are clear].
-    *   **Plausible Google News Link (based on title and source):** [https://news.google.com/search?q=Jed%20McCaleb%20Vast%20Space%20Decrypt&hl=en-US&gl=US&ceid=US:en](https://news.google.com/search?q=Jed%20McCaleb%20Vast%20Space%20Decrypt&hl=en-US&gl=US&ceid=US:en) (Please verify the exact link on Google News)
-
-*   **Washington Watch: The Securities and Exchange Commission hosted its first crypto-industry roundtable Friday, with commisioners vowing to work toward a viable regulatory framework for the token market... The White House is exploring the use of on-chain technology to improve security, transparency, and traceability of foreign-aid payments... President Trump explicitly promoted the TRUMP memecoin on his Truth Social platform, sending its price on a roller-coaster ride.**. These are various developments in the regulatory and political landscape concerning crypto, which are always relevant for your audience.
-    *   **Sources:** This is a summary of several points from the "Washington Watch" section in the "2025-03-23-wir.md" excerpt. You would need to find the original news reports for each of these points from news outlets like CoinDesk, The Block, etc., by searching with relevant keywords and dates around March 21-22, 2025.
-
-Please note that some of the Google News links provided are plausible constructions based on the available information. You should verify the exact links and headlines on Google News or the respective news sites to ensure accuracy for your newsletter.
-
-# Prompt 2
-
-Those look good so far. Now could you please rewrite the summaries as markdown, each in 1-3 sentences in the style of w3w's usual news summaries?
-
-# Response 2
-
-Here are the rewritten news summaries in markdown format, each in 1-3 sentences in the style of w3w's usual news summaries:
-
-*   **Trump became the first president to sign a crypto bill into law**, ending an anti-DeFi IRS rule, signaling a significant shift in US regulation of the crypto space [your prior response]. This move is likely to be very relevant for w3w readers interested in DeFi and regulatory developments [your prior response].
-*   A **US Senate bill is reportedly threatening crypto and AI data centers with new fees**, potentially impacting both sectors crucial to w3w's coverage [your prior response]. This development could have substantial implications for the growth and operation of crypto and AI infrastructure in the US [your prior response].
-*   **BlackRock's crypto asset holdings reportedly decreased by $5 billion** due to recent price declines in Bitcoin and Ethereum [your prior response]. This significant fluctuation for a major institutional player highlights the volatility in the cryptocurrency market [your prior response].
-*   **Ethereum developers are exploring ways to enhance privacy on the network**, with discussions around encrypted mempools and default privacy settings gaining traction [your prior response]. This push for greater privacy addresses a key concern within the crypto community [your prior response].
-*   **OpenAI has released its initial research into the emotional impact of ChatGPT on its users**, noting that a small portion of users engage with the AI for about half an hour daily. As AI's influence grows, understanding its effects on users is becoming increasingly important [your prior response].
-*   **Solana futures have begun trading on the Chicago Mercantile Exchange (CME)**. This marks a significant step for Solana, indicating growing institutional interest in the Ethereum competitor [your prior response].
-*   **Stablecoin issuer Tether is reportedly in discussions with a Big Four accounting firm to conduct an audit of its reserves**. This move towards greater transparency could impact trust and stability within the stablecoin market [your prior response].
-*   **Analytics provider Strategy (formerly MicroStrategy) raised $711 million to further increase its Bitcoin holdings**, now exceeding $40 billion. This ongoing accumulation of Bitcoin by a major corporation reflects a trend of corporate adoption [your prior response].
-*   **Jed McCaleb, a co-founder of Ripple and Mt. Gox, is investing $1 billion in Vast Space**, a new aerospace company aiming to build a space station to succeed the ISS. This investment by a prominent figure in the crypto world into the space industry represents an interesting convergence of technologies [your prior response].
-*   **The SEC hosted its first crypto-industry roundtable**, discussing a regulatory framework, while the **White House is exploring on-chain tech for foreign aid**, and **President Trump promoted the TRUMP memecoin**, causing price volatility. These diverse developments in regulation and political engagement with crypto are important for w3w readers to follow [your prior response].
-
--->
-
 # tktk
 ## tktk
 
@@ -85,42 +13,27 @@ Here are the rewritten news summaries in markdown format, each in 1-3 sentences 
 
 ### Five Things: April 6-12, 2025
 
-- Good Prof G episode: https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson | S&P 500 trading like a meme stock | Bond yields/debt ceiling | "Rivers reversing." Effect on Big Tech. ([]())
+- Good Prof G episode: https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson | S&P 500 trading like a meme stock | Bond yields/debt ceiling | "Rivers reversing." Effect on Big Tech. ([]()) New tariff exemptions for tech products announced Saturday <!-- Link TK -->
 
-- **The Atlantic's Matteo Wong** says the White House's attack on academic research is [jeopardizing American leadership](https://www.theatlantic.com/technology/archive/2025/04/trump-jeopardizing-ai-boom/682404/) in AI, which relies on collaboration among universities, government, and industry.
+- Other Washington developments to watch: **The Atlantic's Matteo Wong** says the White House's attack on academic research is [jeopardizing American leadership](https://www.theatlantic.com/technology/archive/2025/04/trump-jeopardizing-ai-boom/682404/) in AI, which relies on collaboration among universities, government, and industry. ([]()) | **Trump became the first president to sign a crypto bill into law**, ending an anti-DeFi IRS rule, signaling a significant shift in US regulation of the crypto space. ([]()) | **A US Senate bill is reportedly threatening crypto and AI data centers with new fees**, potentially impacting both sectors crucial to w3w's coverage. This development could have substantial implications for the growth and operation of crypto and AI infrastructure in the US. ([]()) | DOJ dissolves its crypto task force. ([]())
 
-- **BlackRock's crypto asset holdings reportedly decreased by $5 billion** due to recent price declines in Bitcoin and Ethereum. This significant fluctuation for a major institutional player highlights the volatility in the cryptocurrency market.
+- **BlackRock's crypto asset holdings reportedly decreased by $5 billion** due to recent price declines in Bitcoin and Ethereum. This significant fluctuation for a major institutional player highlights the volatility in the cryptocurrency market. ([]())  MSTR may need to sell bitcoin https://news.google.com/read/CBMiZkFVX3lxTE0wZmc2RWsySkFyUWh0a3VEbGtmUXBVZTFyNWVScWtPdEFpZWlxU0cyb1c2VUM3RG1lMklxVDBiYUVBRS1VSlpwYVhkZkFSYVFPMEJUUWhtTmVXN1QySklEc3NjOTA2dw?hl=en-US&gl=US&ceid=US%3Aen
 
-- **Trump became the first president to sign a crypto bill into law**, ending an anti-DeFi IRS rule, signaling a significant shift in US regulation of the crypto space.
-
-- **A US Senate bill is reportedly threatening crypto and AI data centers with new fees**, potentially impacting both sectors crucial to w3w's coverage. This development could have substantial implications for the growth and operation of crypto and AI infrastructure in the US.
-
-- **Ethereum developers are exploring ways to enhance privacy on the network**, with discussions around encrypted mempools and default privacy settings gaining traction. This push for greater privacy addresses a key concern within the crypto community.
-
-- MSTR may need to sell bitcoin https://news.google.com/read/CBMiZkFVX3lxTE0wZmc2RWsySkFyUWh0a3VEbGtmUXBVZTFyNWVScWtPdEFpZWlxU0cyb1c2VUM3RG1lMklxVDBiYUVBRS1VSlpwYVhkZkFSYVFPMEJUUWhtTmVXN1QySklEc3NjOTA2dw?hl=en-US&gl=US&ceid=US%3Aen
-
-- DOJ dissolves its crypto task force. ([]())
+- Tether considering new US stablecoin to facilitate faster payments between banks. ([]())
 
 - Ripple buys Hidden Road + new ETF
 
-- Tether considering new US stablecoin to facilitate faster payments between banks. ([]()) <!-- Link TK
-
-- Galaxy listing on Nasdaq? ([]())
-
-- House committee hearing wednesday on innovation and digital assets.
-
-- Argentina probing Libra.
-
+- **Ethereum developers are exploring ways to enhance privacy on the network**, with discussions around encrypted mempools and default privacy settings gaining traction. This push for greater privacy addresses a key concern within the crypto community.
 
 ### Odds & Ends
 
 - TK ([Washington Post](https://www.washingtonpost.com/climate-solutions/2025/04/09/seaweed-problem-caribbean-electricity/))
 
-- AI dolls <!-- TKTK -->
+- AI dolls ([]()) <!-- TKTK -->
 
-_**That's it for now. Thanks for reading the newsletter today!**_
+_**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊
 
-<!-- Other boilerplate needs reworking...
+<!-- Boilerplate needs reworking...
 
 _**About me: I'm a New York-based consultant and writer with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization at the time with other people doing the same.**_
 
@@ -129,5 +42,3 @@ _**During the COVID pandemic, I served as Head of Content for the censorship-res
 _**If you need to reach me directly for any reason, please email peter[at]w3w[dot]media.**_
 
 -->
-
-_**Best wishes for a healthy and productive week ahead.**_ 😊
