--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -13,23 +13,32 @@
 
 ### Five Things: April 6-12, 2025
 
-- Good Prof G episode: https://www.youtube.com/watch?v=cP5h_C1tu_U Ed Elson | S&P 500 trading like a meme stock | Bond yields/debt ceiling | "Rivers reversing." Effect on Big Tech. ([]()) New tariff exemptions for tech products announced Saturday <!-- Link TK -->
+- **Markets got a reprieve on tariffs, for now.** Stocks and crypto finished a volatile week with modest gains after the Trump administration announced it would pause tariffs for 90 days on imports into the U.S. from most countries -- with the notable exception of China. The tech industry also hailed a round of tailored [tariff exemptions for imported gadgets](https://www.wsj.com/tech/trump-exempts-smartphones-other-electronics-from-chinese-tariffs-dd8eb31f?st=P2Eafr&reflink=desktopwebshare_permalink), announced late Friday. The S&P 500 [snapped](https://www.marketwatch.com/livecoverage/stock-market-today-dow-s-p-500-and-nasdaq-set-for-weaker-start-fedex-nike-shares-slump/card/u-s-stocks-end-higher-friday-as-s-p-500-snaps-four-straight-weeks-of-losses-MgwIOqiuNIPFtfjFUvFM) a four-week losing streak, and bitcoin traded with a 7-day gain of nearly 3% as of late Saturday in New York.
 
-- Other Washington developments to watch: **The Atlantic's Matteo Wong** says the White House's attack on academic research is [jeopardizing American leadership](https://www.theatlantic.com/technology/archive/2025/04/trump-jeopardizing-ai-boom/682404/) in AI, which relies on collaboration among universities, government, and industry. ([]()) | **Trump became the first president to sign a crypto bill into law**, ending an anti-DeFi IRS rule, signaling a significant shift in US regulation of the crypto space. ([]()) | **A US Senate bill is reportedly threatening crypto and AI data centers with new fees**, potentially impacting both sectors crucial to w3w's coverage. This development could have substantial implications for the growth and operation of crypto and AI infrastructure in the US. ([]()) | DOJ dissolves its crypto task force. ([]())
+- **However, the longer-term picture for the U.S. remains murky,** for reasons I would say the [Prof G Markets podcast covered](https://www.youtube.com/watch?v=cP5h_C1tu_U) very thoroughly and acceseibly. To very briefly summarize the concerns of host Scott Galloway & Co: It's still worrisome that U.S. tariff policy is now effectively at the whim of just one man, who clearly has zero regard for America's decades-long preference for openness on trade. Even if he's announced good news for now, what if he does the opposite on a moment's notice later? No wonder the S&P 500 has been trading more like a rumor-driven "meme stock" lately, and bond prices [have fallen](https://www.msn.com/en-us/money/markets/treasury-bond-yield-set-for-largest-weekly-rise-since-1981-this-isn-t-normal-and-it-worries-wall-street/ar-AA1CL5cn) at a time when investors are hungry for safe havens. Investors effectively rejected U.S. Treasury debt for that purpose last week, signaling a shift in overseas investors' perceptions of America that could persist much longer, Galloway says.
 
-- **BlackRock's crypto asset holdings reportedly decreased by $5 billion** due to recent price declines in Bitcoin and Ethereum. This significant fluctuation for a major institutional player highlights the volatility in the cryptocurrency market. ([]())  MSTR may need to sell bitcoin https://news.google.com/read/CBMiZkFVX3lxTE0wZmc2RWsySkFyUWh0a3VEbGtmUXBVZTFyNWVScWtPdEFpZWlxU0cyb1c2VUM3RG1lMklxVDBiYUVBRS1VSlpwYVhkZkFSYVFPMEJUUWhtTmVXN1QySklEc3NjOTA2dw?hl=en-US&gl=US&ceid=US%3Aen
+- **Other Washington stories to watch:** The Atlantic's Matteo Wong says the White House's attack on academic research is [jeopardizing American leadership](https://www.theatlantic.com/technology/archive/2025/04/trump-jeopardizing-ai-boom/682404/) in AI, which relies on collaboration among universities, government, and industry. <!-- ([]()) | **Trump became the first president to sign a crypto bill into law**, ending an anti-DeFi IRS rule, signaling a significant shift in US regulation of the crypto space. ([]()) | **A US Senate bill is reportedly threatening crypto and AI data centers with new fees**, potentially impacting both sectors crucial to w3w's coverage. This development could have substantial implications for the growth and operation of crypto and AI infrastructure in the US.  ([]()) | DOJ dissolves its crypto task force. ([]()) SEC dismissed Helium case.  --> 
 
-- Tether considering new US stablecoin to facilitate faster payments between banks. ([]())
+- **BlackRock's crypto asset holdings reportedly decreased by $5 billion** due to recent price declines in Bitcoin and Ethereum. This significant fluctuation for a major institutional player highlights the volatility in the cryptocurrency market. https://decrypt.co/314499/blackrock-crypto-asset-holdings-down-5-billion-bitcoin-ethereum-fall ([]())  MSTR may need to sell bitcoin https://news.google.com/read/CBMiZkFVX3lxTE0wZmc2RWsySkFyUWh0a3VEbGtmUXBVZTFyNWVScWtPdEFpZWlxU0cyb1c2VUM3RG1lMklxVDBiYUVBRS1VSlpwYVhkZkFSYVFPMEJUUWhtTmVXN1QySklEc3NjOTA2dw?hl=en-US&gl=US&ceid=US%3Aen
+
+- Tether considering new US stablecoin to facilitate faster payments between banks. ([]()) https://www.forbes.com/sites/digital-assets/2025/04/09/144-billion-tethers-next-act-a-us-stablecoin-and-a-peer-to-peer-chatgpt/ | https://finance.yahoo.com/news/tether-flip-ethereum-jan3-ceo-141558019.html
+
+
+<!--
+
+- **Ethereum developers are exploring ways to enhance privacy on the network**, with discussions around encrypted mempools and default privacy settings gaining traction. This push for greater privacy addresses a key concern within the crypto community. https://www.coindesk.com/tech/2025/04/11/can-ethereum-be-truly-private-developers-push-for-encrypted-mempool-default-privacy
 
 - Ripple buys Hidden Road + new ETF
 
-- **Ethereum developers are exploring ways to enhance privacy on the network**, with discussions around encrypted mempools and default privacy settings gaining traction. This push for greater privacy addresses a key concern within the crypto community.
+- NH house passes bitcoin reserve bill. https://decrypt.co/314412/new-hampshire-house-bitcoin-reserve-bill
+
+-->
 
 ### Odds & Ends
 
 - TK ([Washington Post](https://www.washingtonpost.com/climate-solutions/2025/04/09/seaweed-problem-caribbean-electricity/))
 
-- AI dolls ([]()) <!-- TKTK -->
+- AI dolls ([]()) https://www.yahoo.com/news/chatgpt-ai-action-figure-trend-what-is-it-and-how-can-i-join-in-200532692.html
 
 _**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊
 
