Edits based in part on query to Leo/Llama 3.1

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,3 +1,27 @@
+<!--
+
+Edits to the copy below based in part on query to Leo/Llama 3.1...
+
+#Prompt
+
+Hi, Leo. Could you please summarize the news articles at the following links for me?
+
+https://cointelegraph.com/news/us-bill-threatens-crypto-ai-data-centers-fees-report
+
+https://decrypt.co/314437/sec-dismisses-helium-case-ending-gary-genslers-final-act
+
+#Response
+
+Here's a summary of the news articles:
+
+* **US Bill Threatens Crypto, AI Data Centers, and Fees Report**:
+  The US government is considering a bill that would require crypto companies to report transactions worth over $10,000 and impose fees on AI data centers. The bill aims to prevent money laundering and other illicit activities. If passed, it could have significant implications for the crypto and AI industries.
+
+* **SEC Dismisses Helium Case, Ending Gary Gensler's Final Act**:
+  The US Securities and Exchange Commission (SEC) has dismissed a case against Helium, a blockchain-based network for IoT devices. This decision marks the end of SEC Chairman Gary Gensler's term, as he had been pushing for stricter regulations on the crypto industry. The dismissal suggests a more lenient approach under the new SEC leadership.
+
+-->
+
 # tktk
 ## tktk
 
@@ -13,32 +37,23 @@
 
 ### Five Things: April 6-12, 2025
 
+The week's most important headlines for emerging tech:
+
 - **Markets got a reprieve on tariffs, for now.** Stocks and crypto finished a volatile week with modest gains after the Trump administration announced it would pause tariffs for 90 days on imports into the U.S. from most countries -- with the notable exception of China. The tech industry also hailed a round of tailored [tariff exemptions for imported gadgets](https://www.wsj.com/tech/trump-exempts-smartphones-other-electronics-from-chinese-tariffs-dd8eb31f?st=P2Eafr&reflink=desktopwebshare_permalink), announced late Friday. The S&P 500 [snapped](https://www.marketwatch.com/livecoverage/stock-market-today-dow-s-p-500-and-nasdaq-set-for-weaker-start-fedex-nike-shares-slump/card/u-s-stocks-end-higher-friday-as-s-p-500-snaps-four-straight-weeks-of-losses-MgwIOqiuNIPFtfjFUvFM) a four-week losing streak, and bitcoin traded with a 7-day gain of nearly 3% as of late Saturday in New York.
 
 - **However, the longer-term picture for the U.S. remains murky,** for reasons I would say the [Prof G Markets podcast covered](https://www.youtube.com/watch?v=cP5h_C1tu_U) very thoroughly and acceseibly. To very briefly summarize the concerns of host Scott Galloway & Co: It's still worrisome that U.S. tariff policy is now effectively at the whim of just one man, who clearly has zero regard for America's decades-long preference for openness on trade. Even if he's announced good news for now, what if he does the opposite on a moment's notice later? No wonder the S&P 500 has been trading more like a rumor-driven "meme stock" lately, and bond prices [have fallen](https://www.msn.com/en-us/money/markets/treasury-bond-yield-set-for-largest-weekly-rise-since-1981-this-isn-t-normal-and-it-worries-wall-street/ar-AA1CL5cn) at a time when investors are hungry for safe havens. Investors effectively rejected U.S. Treasury debt for that purpose last week, signaling a shift in overseas investors' perceptions of America that could persist much longer, Galloway says.
 
-- **Other Washington stories to watch:** The Atlantic's Matteo Wong says the White House's attack on academic research is [jeopardizing American leadership](https://www.theatlantic.com/technology/archive/2025/04/trump-jeopardizing-ai-boom/682404/) in AI, which relies on collaboration among universities, government, and industry. <!-- ([]()) | **Trump became the first president to sign a crypto bill into law**, ending an anti-DeFi IRS rule, signaling a significant shift in US regulation of the crypto space. ([]()) | **A US Senate bill is reportedly threatening crypto and AI data centers with new fees**, potentially impacting both sectors crucial to w3w's coverage. This development could have substantial implications for the growth and operation of crypto and AI infrastructure in the US.  ([]()) | DOJ dissolves its crypto task force. ([]()) SEC dismissed Helium case.  --> 
+- **Other Washington stories to watch:** The Department of Justice [disbanded](https://www.reuters.com/world/us/us-justice-dept-disbands-cryptocurrency-enforcement-unit-2025-04-08/) its crypto enforcement team... President Donald Trump [signed his first crypto-related bill](https://decrypt.co/314409/trump-first-president-sign-crypto-bill) into law Thursday, eliminating an IRS rule imposing strict reporting rules on decentralized finance (DeFI) platforms... The Securities and Exchange Commission [dropped its case](https://decrypt.co/314437/sec-dismisses-helium-case-ending-gary-genslers-final-act) against Nova Labs, saying the tokens its Helium network uses to manage internet-connected devices aren't securities. The decision set a striking contrast to the enforcement approach of the Biden administration... A new Senate bill could [hit data centers for crypto and AI](https://cointelegraph.com/news/us-bill-threatens-crypto-ai-data-centers-fees-report) with fees if they exceed federal emissions targets...  The Atlantic's Matteo Wong says the White House's recent attack on academic research is [jeopardizing American leadership](https://www.theatlantic.com/technology/archive/2025/04/trump-jeopardizing-ai-boom/682404/) in AI.
 
-- **BlackRock's crypto asset holdings reportedly decreased by $5 billion** due to recent price declines in Bitcoin and Ethereum. This significant fluctuation for a major institutional player highlights the volatility in the cryptocurrency market. https://decrypt.co/314499/blackrock-crypto-asset-holdings-down-5-billion-bitcoin-ethereum-fall ([]())  MSTR may need to sell bitcoin https://news.google.com/read/CBMiZkFVX3lxTE0wZmc2RWsySkFyUWh0a3VEbGtmUXBVZTFyNWVScWtPdEFpZWlxU0cyb1c2VUM3RG1lMklxVDBiYUVBRS1VSlpwYVhkZkFSYVFPMEJUUWhtTmVXN1QySklEc3NjOTA2dw?hl=en-US&gl=US&ceid=US%3Aen
+- **Institutional crypto whales have been taking some hits.** BlackRock's crypto asset holdings have [decreased by $5 billion](https://decrypt.co/314499/blackrock-crypto-asset-holdings-down-5-billion-bitcoin-ethereum-fall) in value due to recent price declines in bitcoin and ether, according to the Wall Street giant's latest earnings release... Strategy, the listed consulting company formerly known as MicroStrategy, said for the first time in regulatory filings that [it might have to sell bitcoin](https://news.google.com/read/CBMiZkFVX3lxTE0wZmc2RWsySkFyUWh0a3VEbGtmUXBVZTFyNWVScWtPdEFpZWlxU0cyb1c2VUM3RG1lMklxVDBiYUVBRS1VSlpwYVhkZkFSYVFPMEJUUWhtTmVXN1QySklEc3NjOTA2dw?hl=en-US&gl=US&ceid=US%3Aen) if market conditions deteriorate enough. The warning contrasts markedly with company founder Michael Saylor's past remarks that bitcoin holders should never sell their tokens.
 
-- Tether considering new US stablecoin to facilitate faster payments between banks. ([]()) https://www.forbes.com/sites/digital-assets/2025/04/09/144-billion-tethers-next-act-a-us-stablecoin-and-a-peer-to-peer-chatgpt/ | https://finance.yahoo.com/news/tether-flip-ethereum-jan3-ceo-141558019.html
-
-
-<!--
-
-- **Ethereum developers are exploring ways to enhance privacy on the network**, with discussions around encrypted mempools and default privacy settings gaining traction. This push for greater privacy addresses a key concern within the crypto community. https://www.coindesk.com/tech/2025/04/11/can-ethereum-be-truly-private-developers-push-for-encrypted-mempool-default-privacy
-
-- Ripple buys Hidden Road + new ETF
-
-- NH house passes bitcoin reserve bill. https://decrypt.co/314412/new-hampshire-house-bitcoin-reserve-bill
-
--->
+- **The stablecoin Tether** has drawn uncomfortably [within reach](https://finance.yahoo.com/news/tether-flip-ethereum-jan3-ceo-141558019.html) of surpassing ether as the world's number-two crypto token by market valuation. USDT's float now stands at $144 billion, less than $50 billion from ETH, which has struggled amid increasing competition from Solana this year.   
 
 ### Odds & Ends
 
-- TK ([Washington Post](https://www.washingtonpost.com/climate-solutions/2025/04/09/seaweed-problem-caribbean-electricity/))
+- **Caribbean countries are trying** to turn a plague of sargassum, a type of seaweed, into a variety of useful products, including biofuel for vehicles, fertilizer, bricks, and pharmaceuticals. ([Washington Post](https://news.google.com/read/CBMinwFBVV95cUxPQm9hRGxHSVJTOU14Yzh2eWdqZEh2b1JkaHYxaDlMd3IyeDR1QVBNcFBjUklyXzRlOWJQbDJYWFBOd2dmWXJUMkdzckdTNVR6dkhiZVFxdU1JN3dtTVpweTdFSW9GTlRkcVZHdHQ3azRzeUR0elYyNGNpQ0ZRNDZKWnJobG9QZEZEcnpHODVyejRYQUJzRkY0TWxHRlEzdTA?hl=en-US&gl=US&ceid=US%3Aen))
 
-- AI dolls ([]()) https://www.yahoo.com/news/chatgpt-ai-action-figure-trend-what-is-it-and-how-can-i-join-in-200532692.html
+- **Yay?** People have begun using ChatGPT to turn their photos [into action figures](https://www.yahoo.com/news/chatgpt-ai-action-figure-trend-what-is-it-and-how-can-i-join-in-200532692.html). 
 
 _**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊
 
