--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,27 +1,3 @@
-<!--
-
-Edits to the copy below based in part on query to Leo/Llama 3.1...
-
-#Prompt
-
-Hi, Leo. Could you please summarize the news articles at the following links for me?
-
-https://cointelegraph.com/news/us-bill-threatens-crypto-ai-data-centers-fees-report
-
-https://decrypt.co/314437/sec-dismisses-helium-case-ending-gary-genslers-final-act
-
-#Response
-
-Here's a summary of the news articles:
-
-* **US Bill Threatens Crypto, AI Data Centers, and Fees Report**:
-  The US government is considering a bill that would require crypto companies to report transactions worth over $10,000 and impose fees on AI data centers. The bill aims to prevent money laundering and other illicit activities. If passed, it could have significant implications for the crypto and AI industries.
-
-* **SEC Dismisses Helium Case, Ending Gary Gensler's Final Act**:
-  The US Securities and Exchange Commission (SEC) has dismissed a case against Helium, a blockchain-based network for IoT devices. This decision marks the end of SEC Chairman Gary Gensler's term, as he had been pushing for stricter regulations on the crypto industry. The dismissal suggests a more lenient approach under the new SEC leadership.
-
--->
-
 # tktk
 ## tktk
 
@@ -39,30 +15,20 @@ Here's a summary of the news articles:
 
 The week's most important headlines for emerging tech:
 
-- **Markets got a reprieve on tariffs, for now.** Stocks and crypto finished a volatile week with modest gains after the Trump administration announced it would pause tariffs for 90 days on imports into the U.S. from most countries -- with the notable exception of China. The tech industry also hailed a round of tailored [tariff exemptions for imported gadgets](https://www.wsj.com/tech/trump-exempts-smartphones-other-electronics-from-chinese-tariffs-dd8eb31f?st=P2Eafr&reflink=desktopwebshare_permalink), announced late Friday. The S&P 500 [snapped](https://www.marketwatch.com/livecoverage/stock-market-today-dow-s-p-500-and-nasdaq-set-for-weaker-start-fedex-nike-shares-slump/card/u-s-stocks-end-higher-friday-as-s-p-500-snaps-four-straight-weeks-of-losses-MgwIOqiuNIPFtfjFUvFM) a four-week losing streak, and bitcoin traded with a 7-day gain of nearly 3% as of late Saturday in New York.
+- **Markets got a temporary reprieve on tariffs.** Stocks and crypto finished a volatile week with modest gains after the Trump administration announced it would pause tariffs for 90 days on imports into the U.S. from most countries -- with the notable exception of China. In particular, the tech industry hailed [tariff exemptions for imported gadgets](https://www.wsj.com/tech/trump-exempts-smartphones-other-electronics-from-chinese-tariffs-dd8eb31f?st=P2Eafr&reflink=desktopwebshare_permalink) announced late Friday. The S&P 500 [snapped](https://www.marketwatch.com/livecoverage/stock-market-today-dow-s-p-500-and-nasdaq-set-for-weaker-start-fedex-nike-shares-slump/card/u-s-stocks-end-higher-friday-as-s-p-500-snaps-four-straight-weeks-of-losses-MgwIOqiuNIPFtfjFUvFM) a four-week losing streak, and bitcoin traded with a 7-day gain of nearly 3% as of late Saturday in New York.
 
-- **However, the longer-term picture for the U.S. remains murky,** for reasons I would say the [Prof G Markets podcast covered](https://www.youtube.com/watch?v=cP5h_C1tu_U) very thoroughly and acceseibly. To very briefly summarize the concerns of host Scott Galloway & Co: It's still worrisome that U.S. tariff policy is now effectively at the whim of just one man, who clearly has zero regard for America's decades-long preference for openness on trade. Even if he's announced good news for now, what if he does the opposite on a moment's notice later? No wonder the S&P 500 has been trading more like a rumor-driven "meme stock" lately, and bond prices [have fallen](https://www.msn.com/en-us/money/markets/treasury-bond-yield-set-for-largest-weekly-rise-since-1981-this-isn-t-normal-and-it-worries-wall-street/ar-AA1CL5cn) at a time when investors are hungry for safe havens. Investors effectively rejected U.S. Treasury debt for that purpose last week, signaling a shift in overseas investors' perceptions of America that could persist much longer, Galloway says.
+- **The longer-term picture for the U.S. remains murky, however.** For a thorough yet accessible discussion of the risks ahead, I would highly recommend [the latest episode](https://www.youtube.com/watch?v=cP5h_C1tu_U) of the Prof G Markets podcast, by venture investor and author Scott Galloway.  (Note: There is some characteristically off-color humor by Galloway at the beginning of the show. But if you can tolerate that, the rest is very much worth a listen on its analytical merits.) To very briefly summarize his concerns: It's still worrisome that U.S. tariff policy is now effectively at the whim of just one man, which subject to change at any moment. That makes it difficult for companies to plan new spending and projects. (Case in point: On Sunday, White House officials [qualified](https://www.msn.com/en-ca/money/topstories/us-commerce-secretary-says-exempted-electronic-products-to-come-under-separate-tariffs/ar-AA1CPHQG) their earlier stance on electronics, saying targeted tariffs on some devices are still likely.) No wonder the S&P 500 has been trading more like a rumor-driven "meme stock" lately, and bond prices [have fallen](https://www.msn.com/en-us/money/markets/treasury-bond-yield-set-for-largest-weekly-rise-since-1981-this-isn-t-normal-and-it-worries-wall-street/ar-AA1CL5cn) at a time when investors are hungry for safe havens. Participants effectively rejected U.S. Treasury debt for that purpose last week, signaling a shift in overseas investors' perceptions of America that could persist much longer, Galloway says.
 
-- **Other Washington stories to watch:** The Department of Justice [disbanded](https://www.reuters.com/world/us/us-justice-dept-disbands-cryptocurrency-enforcement-unit-2025-04-08/) its crypto enforcement team... President Donald Trump [signed his first crypto-related bill](https://decrypt.co/314409/trump-first-president-sign-crypto-bill) into law Thursday, eliminating an IRS rule imposing strict reporting rules on decentralized finance (DeFI) platforms... The Securities and Exchange Commission [dropped its case](https://decrypt.co/314437/sec-dismisses-helium-case-ending-gary-genslers-final-act) against Nova Labs, saying the tokens its Helium network uses to manage internet-connected devices aren't securities. The decision set a striking contrast to the enforcement approach of the Biden administration... A new Senate bill could [hit data centers for crypto and AI](https://cointelegraph.com/news/us-bill-threatens-crypto-ai-data-centers-fees-report) with fees if they exceed federal emissions targets...  The Atlantic's Matteo Wong says the White House's recent attack on academic research is [jeopardizing American leadership](https://www.theatlantic.com/technology/archive/2025/04/trump-jeopardizing-ai-boom/682404/) in AI.
+- **Other Washington stories to watch:** The Department of Justice [disbanded](https://www.reuters.com/world/us/us-justice-dept-disbands-cryptocurrency-enforcement-unit-2025-04-08/) its crypto enforcement team... Trump [signed his first crypto-related bill](https://decrypt.co/314409/trump-first-president-sign-crypto-bill) into law Thursday, eliminating an IRS rule imposing strict reporting rules on decentralized finance (DeFI) platforms... The Securities and Exchange Commission [dropped its case](https://decrypt.co/314437/sec-dismisses-helium-case-ending-gary-genslers-final-act) against Nova Labs, saying the tokens its Helium network uses to manage internet-connected devices aren't securities. The decision set a striking contrast to the enforcement approach of the Biden administration... A new Senate bill could [hit data centers for crypto and AI](https://cointelegraph.com/news/us-bill-threatens-crypto-ai-data-centers-fees-report) with fees if they exceed federal emissions targets...  The Atlantic's Matteo Wong says the White House's recent attack on academic research is [jeopardizing American leadership](https://www.theatlantic.com/technology/archive/2025/04/trump-jeopardizing-ai-boom/682404/) in AI.
 
-- **Institutional crypto whales have been taking some hits.** BlackRock's crypto asset holdings have [decreased by $5 billion](https://decrypt.co/314499/blackrock-crypto-asset-holdings-down-5-billion-bitcoin-ethereum-fall) in value due to recent price declines in bitcoin and ether, according to the Wall Street giant's latest earnings release... Strategy, the listed consulting company formerly known as MicroStrategy, said for the first time in regulatory filings that [it might have to sell bitcoin](https://news.google.com/read/CBMiZkFVX3lxTE0wZmc2RWsySkFyUWh0a3VEbGtmUXBVZTFyNWVScWtPdEFpZWlxU0cyb1c2VUM3RG1lMklxVDBiYUVBRS1VSlpwYVhkZkFSYVFPMEJUUWhtTmVXN1QySklEc3NjOTA2dw?hl=en-US&gl=US&ceid=US%3Aen) if market conditions deteriorate enough. The warning contrasts markedly with company founder Michael Saylor's past remarks that bitcoin holders should never sell their tokens.
+- **Institutional crypto whales have been taking some hits.** BlackRock's crypto asset holdings have [decreased by $5 billion](https://decrypt.co/314499/blackrock-crypto-asset-holdings-down-5-billion-bitcoin-ethereum-fall) in value due to recent price declines in bitcoin and ether, according to the Wall Street giant's latest earnings release. And Strategy, the listed consulting company formerly known as MicroStrategy, said for the first time in regulatory filings that [it might have to sell bitcoin](https://news.google.com/read/CBMiZkFVX3lxTE0wZmc2RWsySkFyUWh0a3VEbGtmUXBVZTFyNWVScWtPdEFpZWlxU0cyb1c2VUM3RG1lMklxVDBiYUVBRS1VSlpwYVhkZkFSYVFPMEJUUWhtTmVXN1QySklEc3NjOTA2dw?hl=en-US&gl=US&ceid=US%3Aen) if market conditions deteriorate enough. The warning contrasts markedly with company founder Michael Saylor's past remarks that bitcoin holders should never sell their tokens.
 
-- **The stablecoin Tether** has drawn uncomfortably [within reach](https://finance.yahoo.com/news/tether-flip-ethereum-jan3-ceo-141558019.html) of surpassing ether as the world's number-two crypto token by market valuation. USDT's float now stands at $144 billion, less than $50 billion from ETH, which has struggled amid increasing competition from Solana this year.   
+- **The stablecoin Tether** has drawn uncomfortably [within reach](https://finance.yahoo.com/news/tether-flip-ethereum-jan3-ceo-141558019.html) of surpassing ether as the world's number-two crypto token by market valuation. USDT's float now stands at $144 billion, less than $50 billion shy of ETH's valuation. The latter has struggled amid increased competition from Solana and other app-focused blockchain platforms this year.   
 
 ### Odds & Ends
 
 - **Caribbean countries are trying** to turn a plague of sargassum, a type of seaweed, into a variety of useful products, including biofuel for vehicles, fertilizer, bricks, and pharmaceuticals. ([Washington Post](https://news.google.com/read/CBMinwFBVV95cUxPQm9hRGxHSVJTOU14Yzh2eWdqZEh2b1JkaHYxaDlMd3IyeDR1QVBNcFBjUklyXzRlOWJQbDJYWFBOd2dmWXJUMkdzckdTNVR6dkhiZVFxdU1JN3dtTVpweTdFSW9GTlRkcVZHdHQ3azRzeUR0elYyNGNpQ0ZRNDZKWnJobG9QZEZEcnpHODVyejRYQUJzRkY0TWxHRlEzdTA?hl=en-US&gl=US&ceid=US%3Aen))
 
-- **Yay?** People have begun using ChatGPT to turn their photos [into action figures](https://www.yahoo.com/news/chatgpt-ai-action-figure-trend-what-is-it-and-how-can-i-join-in-200532692.html). 
+- **Yay?** People have begun using ChatGPT to turn their photos [into action figures](https://www.yahoo.com/news/chatgpt-ai-action-figure-trend-what-is-it-and-how-can-i-join-in-200532692.html).
 
 _**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊
-
-<!-- Boilerplate needs reworking...
-
-_**About me: I'm a New York-based consultant and writer with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization at the time with other people doing the same.**_
-
-_**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
-
-_**If you need to reach me directly for any reason, please email peter[at]w3w[dot]media.**_
-
--->
