Drafting lede item + Copilot query

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,3 +1,29 @@
+<!--
+
+Tried to use GitHub Copilot to copyedit the news summary on this revision, but output wasn't very helplful. Not incorporating any of its suggested changes in this commit's copy. But just for the record, here's my exchange with Copilot...
+
+# Prompt
+
+Copilot, could you please copyedit the bulleted news summary items in the "Five Things" section of this newsletter draft for me? Check for spelling and improve brevity and flow where possible. Please output revised version of the items as markdown with full urls to the linked third-party news sites preserved.
+
+# Response
+
+### Five Things: April 6-12, 2025
+
+The week's most important headlines for emerging tech:
+
+- **Markets saw a temporary reprieve on tariffs.** Stocks and crypto ended a volatile week with modest gains after the Trump administration announced a 90-day pause on import tariffs. ([Source](https://www.reuters.com/article/us-usa-trade-tariffs-idUSKBN2C10D9))
+
+- **The long-term U.S. economic outlook remains uncertain.** For an accessible discussion of the risks ahead, check out [the latest episode](https://www.youtube.com/watch?v=example) of this insightful YouTube series.
+
+- **DOJ disbands its cryptocurrency enforcement unit.** The Department of Justice has [shut down](https://www.reuters.com/world/us/us-justice-dept-disbands-cryptocurrency-enforcement-unit-2025-04-08/) the unit tasked with overseeing crypto-related cases.
+
+- **Institutional crypto investors are taking hits.** BlackRock's crypto asset holdings have [dropped by $5 billion](https://decrypt.co/314499/blackrock-crypto-asset-holdings-down-5-billion-2025).
+
+- **Tether may soon surpass Ethereum.** The stablecoin is [closing in](https://finance.yahoo.com/news/tether-flip-ethereum-jan3-ceo-141558019.html) on ether to become the world's second-largest crypto token by market cap.
+
+-->
+
 # tktk
 ## tktk
 
@@ -9,7 +35,23 @@
 
 <hr>
 
-**TKTK.** tktktk.
+**Two years ago,** I began [my first tentative experiments](https://medium.com/the-modern-scientist/robots-and-humans-a-new-era-in-journalism-b07bd6d33eb5) integrating AI tools into my workflow for this newsletter. Like many folks, I've been fiddling around ever since with different tools, scrambling to keep up with the dizzying pace of product releases, trying to discern which apps and models are best at which tasks, and so on. That process has so far been pretty ad-hoc for me, frankly.
+
+Now I'm adding more strucure, including an open-source component that I want to invite everyone into with this update. Here's how it works:
+
+- **The general idea** is to provide greater visibility into the editorial process for w3w, especially AI-assisted parts that may be of interest to developers or news organizations trying to innovate for this new era. As a bonus, I think the changes will improve transparency and trust for all readers.
+
+- **If you want to follow along,** or contribute, the place to do that will be the coding site GitHub. I've long maintained a [repository of w3w content](https://github.com/peteramckay/w3wnewsletter) there, for purposes of preserving a full archive of the newsletter away from hosted blogging platforms that can always be shut down. The repo was previously private, visible only to me. But I've now made it public, free to use with appropriate attribution under Creative Commons 4.0 license.
+
+<!-- I've always maintained a repo there as an archive. Creative Commons licensing, etc. -->
+
+<!-- Flesh out why, etc.
+
+Final thoughts...
+
+- Sweet spot is collaboration
+
+-->
 
 ### Five Things: April 6-12, 2025
 
