Full draft of lead item.

--- a/2025/2025-04-13-wir.md
+++ b/2025/2025-04-13-wir.md
@@ -1,31 +1,5 @@
-<!--
-
-Tried to use GitHub Copilot to copyedit the news summary on this revision, but output wasn't very helplful. Not incorporating any of its suggested changes in this commit's copy. But just for the record, here's my exchange with Copilot...
-
-# Prompt
-
-Copilot, could you please copyedit the bulleted news summary items in the "Five Things" section of this newsletter draft for me? Check for spelling and improve brevity and flow where possible. Please output revised version of the items as markdown with full urls to the linked third-party news sites preserved.
-
-# Response
-
-### Five Things: April 6-12, 2025
-
-The week's most important headlines for emerging tech:
-
-- **Markets saw a temporary reprieve on tariffs.** Stocks and crypto ended a volatile week with modest gains after the Trump administration announced a 90-day pause on import tariffs. ([Source](https://www.reuters.com/article/us-usa-trade-tariffs-idUSKBN2C10D9))
-
-- **The long-term U.S. economic outlook remains uncertain.** For an accessible discussion of the risks ahead, check out [the latest episode](https://www.youtube.com/watch?v=example) of this insightful YouTube series.
-
-- **DOJ disbands its cryptocurrency enforcement unit.** The Department of Justice has [shut down](https://www.reuters.com/world/us/us-justice-dept-disbands-cryptocurrency-enforcement-unit-2025-04-08/) the unit tasked with overseeing crypto-related cases.
-
-- **Institutional crypto investors are taking hits.** BlackRock's crypto asset holdings have [dropped by $5 billion](https://decrypt.co/314499/blackrock-crypto-asset-holdings-down-5-billion-2025).
-
-- **Tether may soon surpass Ethereum.** The stablecoin is [closing in](https://finance.yahoo.com/news/tether-flip-ethereum-jan3-ceo-141558019.html) on ether to become the world's second-largest crypto token by market cap.
-
--->
-
-# tktk
-## tktk
+# Hed TK
+## Sub-hed TK
 
 ![Robot manning a workstation](https://w3w.news/img/illos/robot-journos-2-cropped.jpg)
 
@@ -39,19 +13,21 @@ The week's most important headlines for emerging tech:
 
 Now I'm adding more strucure, including an open-source component that I want to invite everyone into with this update. Here's how it works:
 
-- **The general idea** is to provide greater visibility into the editorial process for w3w, especially AI-assisted parts that may be of interest to developers or news organizations trying to innovate for this new era. As a bonus, I think the changes will improve transparency and trust for all readers.
+- **The general idea** is to provide greater visibility into the editorial process for w3w, especially AI-assisted parts that may be of interest to developers or news organizations trying to innovate for this new era. As a bonus, the changes described below should improve transparency and trust for all readers.
 
-- **If you want to follow along,** or contribute, the place to do that will be the coding site GitHub. I've long maintained a [repository of w3w content](https://github.com/peteramckay/w3wnewsletter) there, for purposes of preserving a full archive of the newsletter away from hosted blogging platforms that can always be shut down. The repo was previously private, visible only to me. But I've now made it public, free to use with appropriate attribution under Creative Commons 4.0 license.
+- **If you want to follow along,** or contribute, the place to do that will be the coding site GitHub. I've long maintained a [repository of w3w content](https://github.com/peteramckay/w3wnewsletter) there, for purposes of preserving a full archive of the newsletter away from hosted blogging platforms that can always be shut down if they're no longer profitable for their shareholders, etc. The repo was previously private, visible only to me. But I've now made it public, free to use with appropriate attribution under [Creative Commons 4.0 license](https://creativecommons.org/licenses/by/4.0/).
 
-<!-- I've always maintained a repo there as an archive. Creative Commons licensing, etc. -->
+- **I've previously commited to the repo** about once or twice a week, usually as a final step for archival purposes on Sundays, with a minimal description attached to each commit.
 
-<!-- Flesh out why, etc.
+- **Beginning with this edition,** commits will be more frequent, including descriptions that specify changes based on queries to specific AI platforms. You can see the new approach in the [GitHub commit history](https://github.com/peteramckay/w3wnewsletter/commits/master/2025/2025-04-13-wir.md) for this edition of the newsleter, for example.
 
-Final thoughts...
+- **In addition, full text of my AI prompts** and the relevant app's output text will be included in a comment at the top of the markdown file in each commit. You can see an example in [this commit](https://github.com/peteramckay/w3wnewsletter/commit/27aa37d6332cee60580d9eb9d4bda47da84b793a) I made late yesterday.
 
-- Sweet spot is collaboration
+- **In the final published version of each week's newsletter,** I'm going to summarize which AI tools I used, to give some transparency to readers who *aren't* on GitHub. Production of this week's edition included help from Copilot, the Brave browser's Leo feature, ChatGPT, and NotebookLM. And the illustration this week is a file image I created with DALL·E back in 2023.
 
--->
+- **I welcome issue reports on GitHub, pull requests, and other contributions as well.** May as well use the site's full feature set, of course.
+
+
 
 ### Five Things: April 6-12, 2025
 
